Update branding from 'ICON-MD' to 'MALiK-X-MD'change

--- a/pair.html
+++ b/pair.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>👑 ICON-MD 👑</title>
+  <title>👑 MALiK-X-MD 👑</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
@@ -163,7 +163,7 @@
 
     <!-- Header -->
     <div class="header">
-      <h1>👑 ICON-MD 👑</h1>
+      <h1>👑 MALiK-X-MD 👑</h1>
     </div>
 
     <!-- Pair Number -->
@@ -190,7 +190,7 @@
             <p>Subscribe for updates 🎬</p>
           </div>
         </div>
-        <a href="https://youtube.com/@Iconbots" target="_blank">Visit</a>
+        <a href="https://youtube.com/@malik-x481" target="_blank">Visit</a>
       </div>
 
       <!-- Telegram -->
@@ -202,25 +202,25 @@
             <p>Join our community 📢</p>
           </div>
         </div>
-        <a href="https://t.me/iconbot_inc" target="_blank">Join</a>
+        <a href="https://t.me/camhackduchs" target="_blank">Join</a>
       </div>
 
       <!-- Owner -->
       <div class="sponsor">
         <div class="sponsor-info">
-          <img src="https://i.ibb.co/9W8L4Fc/gt.jpg" alt="Owner">
+          <img src="https://i.ibb.co/DfHQJzLC/images.jpg" alt="Owner">
           <div>
-            <h4>Owner</h4>
-            <p>Contact me directly 👑</p>
+            <h4>Whatsapp channel</h4>
+            <p>Subscribe for updates 👑</p>
           </div>
         </div>
-        <a href="https://t.me/just_me_icon" target="_blank">Message</a>
+        <a href="https://whatsapp.com/channel/0029VbBWarvEquiRThKxXY22" target="_blank">Message</a>
       </div>
     </div>
 
     <!-- Footer -->
     <div class="footer">
-      <p>© Created by Icon</p>
+      <p>© Created by malik-x </p>
     </div>
   </div>
 
