Change link text from 'Message' to 'join'hxdhd

--- a/pair.html
+++ b/pair.html
@@ -214,7 +214,7 @@
             <p>Subscribe for updates 👑</p>
           </div>
         </div>
-        <a href="https://whatsapp.com/channel/0029VbBWarvEquiRThKxXY22" target="_blank">Message</a>
+        <a href="https://whatsapp.com/channel/0029VbBWarvEquiRThKxXY22" target="_blank">join</a>
       </div>
     </div>
 
